--- a/HiringManager.Web/packages.config
+++ b/HiringManager.Web/packages.config
@@ -2,12 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net451" />
   <package id="AutoMapper" version="3.0.0" targetFramework="net40" />
-  <package id="DotNetOpenAuth.AspNet" version="4.3.3.13295" targetFramework="net451" />
-  <package id="DotNetOpenAuth.Core" version="4.3.3.13295" targetFramework="net451" />
-  <package id="DotNetOpenAuth.OAuth.Consumer" version="4.3.3.13295" targetFramework="net451" />
-  <package id="DotNetOpenAuth.OAuth.Core" version="4.3.3.13295" targetFramework="net451" />
-  <package id="DotNetOpenAuth.OpenId.Core" version="4.3.3.13295" targetFramework="net451" />
-  <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.3.3.13295" targetFramework="net451" />
+  <package id="bootstrap" version="3.0.1" targetFramework="net451" />
   <package id="EntityFramework" version="6.0.1" targetFramework="net451" />
   <package id="EntityFramework.SqlServerCompact" version="6.0.1" targetFramework="net451" />
   <package id="jQuery" version="2.0.3" targetFramework="net451" />
@@ -28,15 +23,11 @@
   <package id="Microsoft.AspNet.WebHelpers" version="3.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="3.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages.Data" version="3.0.0" targetFramework="net451" />
-  <package id="Microsoft.AspNet.WebPages.OAuth" version="3.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages.WebData" version="3.0.0" targetFramework="net451" />
-  <package id="Microsoft.Bcl" version="1.1.3" targetFramework="net451" />
-  <package id="Microsoft.Bcl.Build" version="1.0.10" targetFramework="net451" />
   <package id="Microsoft.Data.Edm" version="5.6.0" targetFramework="net451" />
   <package id="Microsoft.Data.OData" version="5.6.0" targetFramework="net451" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.0.0" targetFramework="net40" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.0.0" targetFramework="net40" />
-  <package id="Microsoft.Net.Http" version="2.2.15" targetFramework="net451" />
   <package id="Microsoft.Owin" version="2.0.1" targetFramework="net451" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.0.1" targetFramework="net451" />
   <package id="Microsoft.Owin.Security" version="2.0.1" targetFramework="net451" />
